<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Popular Show</string>
    <string name="film">Film</string>
    <string name="show">TV Show</string>
    <string name="title" tools:ignore="ExtraTranslation">Title</string>
    <string name="release_date">Release Date</string>
    <string name="title_activity_detail">Detail Show</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="overview">Overview</string>
    <string name="first_air_date">First Air Date</string>
    <string name="description">Deksripsi</string>
    <string name="previous">Previous</string>


</resources>